[package]
name = "urkel"
version = "0.1.0"
authors = ["Sergei Shulepov <s.pepyakin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
urkel-sys = { path = "urkel-sys", version = "*" }
cfg-if = "0.1.10"
thiserror = "1.0.20"

[dev-dependencies]
tempfile = "3.1.0"
hex-literal = "0.3.1"
assert_matches = "1.3.0"
blake2-rfc = "0.2.18"
